source/docs/assets/css/main.css
/* ... */
@font-face {
  font-family: 'AvenirLT-Italic';
  font-weight: normal;
  font-style: italic;
  src: url("../fonts/avenir/2D03DF_A_0.eot");
  src: url("../fonts/avenir/2D03DF_A_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_A_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_A_0.woff") format("woff"), url("../fonts/avenir/2D03DF_A_0.ttf") format("truetype"); }

@font-face {
  font-family: AvenirLT-Medium;
  font-weight: 600;
  font-style: normal;
  src: url("../fonts/avenir/2D03DF_1_0.eot");
  src: url("../fonts/avenir/2D03DF_1_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_1_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_1_0.woff") format("woff"), url("../fonts/avenir/2D03DF_1_0.ttf") format("truetype"); }

@font-face {
  font-family: 'AvenirLT-MediumItalic';
  font-weight: 600;
  font-style: italic;
  src: url("../fonts/avenir/2D03DF_2_0.eot");
  src: url("../fonts/avenir/2D03DF_2_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_2_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_2_0.woff") format("woff"), url("../fonts/avenir/2D03DF_2_0.ttf") format("truetype"); }

@font-face {
  font-family: Avenir-Heavy;
  font-weight: 700;
  font-style: normal;
  src: url("../fonts/avenir/2D03DF_B_0.eot");
  src: url("../fonts/avenir/2D03DF_B_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_B_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_B_0.woff") format("woff"), url("../fonts/avenir/2D03DF_B_0.ttf") format("truetype"); }

@font-face {
  font-family: 'AvenirLT-HeavyItalic';
  font-weight: 700;
  font-style: italic;
  src: url("../fonts/avenir/2D03DF_5_0.eot");
  src: url("../fonts/avenir/2D03DF_5_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_5_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_5_0.woff") format("woff"), url("../fonts/avenir/2D03DF_5_0.ttf") format("truetype"); }

@font-face {
  font-family: 'AvenirLT-Black';
  font-weight: 800;
  font-style: normal;
  src: url("../fonts/avenir/2D03DF_4_0.eot");
  src: url("../fonts/avenir/2D03DF_4_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_4_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_4_0.woff") format("woff"), url("../fonts/avenir/2D03DF_4_0.ttf") format("truetype"); }

@font-face {
  font-family: 'AvenirLT-BlackItalic';
  font-weight: 800;
  font-size: italic;
  src: url("../fonts/avenir/2D03DF_8_0.eot");
  src: url("../fonts/avenir/2D03DF_8_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_8_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_8_0.woff") format("woff"), url("../fonts/avenir/2D03DF_8_0.ttf") format("truetype"); }

@font-face {
  font-family: 'AvenirLT-BlackItalic';
  font-weight: 900;
  font-size: italic;
  src: url("../fonts/avenir/2D03DF_8_0.eot");
  src: url("../fonts/avenir/2D03DF_8_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_8_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_8_0.woff") format("woff"), url("../fonts/avenir/2D03DF_8_0.ttf") format("truetype"); }

@font-face {
  font-family: 'AvenirLT-Black';
  font-weight: 900;
  font-style: normal;
  src: url("../fonts/avenir/2D03DF_4_0.eot");
  src: url("../fonts/avenir/2D03DF_4_0.eot?#iefix") format("embedded-opentype"), url("../fonts/avenir/2D03DF_4_0.woff2") format("woff2"), url("../fonts/avenir/2D03DF_4_0.woff") format("woff"), url("../fonts/avenir/2D03DF_4_0.ttf") format("truetype"); }





p, h1, h2, h3, h4, h5, h6, a {
  font-family: 'pan-docs';
}
p, h1, h2, h3, h4, h5, h6, a, ol, ul {
  font-family: Avenir-Light;
  font-weight:normal;
}
.article a {
  text-decoration: underline;
  color: #0093c9;
}
.changelog-sidebar a {
  color: #0093c9;
  text-decoration: none;

}
.changelog-wrapper a {
  color: #0093c9;
  text-decoration: underline;
}
.changelog-sidebar a:hover{
  opacity: 0.65;
  color: #0093c9;
  text-decoration: none;
}
.changelog-wrapper a:hover {
  opacity: 0.65;
  color: #0093c9;

}
.article a:hover {
  opacity: 0.65;
  color: #0093c9;
}
.article a.helpful__button:hover {
  opacity: 1;
}
h1.main-headline {
  font-family: Avenir-Heavy;
}
h1.title {
  font-family: 'AvenirLT-Black';
  font-size: 42px;
  color: #313945;
  line-height: 46px;
  margin-bottom: 30px;
  margin-top:30px;
}
h2.subtitle {
  font-family: Avenir-Light;
  font-size: 36px;
  color: #313945;
  line-height: 43px;
  margin-bottom: 30px;
  margin-top: 0;
}
ol {
  color:#44525E;
  font-size: 18px;
  line-height: 29px;
}
p{
  margin: 0 0 20px;
  color:#44525E;
  font-size: 18px;
  line-height: 29px;
}

.instruction {  /*smaller margin-bottom on paragraphs preceeding code snippets*/
  margin-bottom: 5px;
}

h1{
  margin-top: 35px;
  font-family: Avenir-Heavy;
  color: #313945;
  }

h2 {
  margin-top: 30px;
  font-family: Avenir-Heavy;
  color: #313945;
  }

h3 {
  margin-top: 30px;
  font-family: Avenir-Heavy;
  color: #44525E;
  }
h4 {
  margin-top: 25px;
  font-family: Avenir-Heavy;
  color: #313945;
}
h3.changelog {
  font-family: Avenir-Heavy;
  font-size: 24px;
  color: #313945;
  line-height: 18px;
  margin-bottom: 25px;
  margin-top: 0;
}
#toc {
  margin-bottom: 50px;
}
.pio-docs-sidebar #toc h4 {
  margin-top: 35px;
}
.share-buttons {
  margin-bottom: 20px;
}

.tab-content-heading {
  margin-top: 15px; /*decrease top margin for headings located in tab switchers*/
}

.featured > li > a {
  text-transform: capitalize;
  margin-bottom: 10px;
}
.featured > li {
  margin-top: 15px;
  font-size: 17px;
}

.featured {
  display: block;
  text-align: ;
}
.article-subhead {
  font-family: Avenir-Heavy;
  font-size: 16px;
  color: #44525E;
  line-height: 24px;
}

.start {
  display: block;
  background-color: white;
  padding: 30px;
}

.start > li > a {
  text-align: left;
}
.cta{
  display:block;
}
.mb-20 {
  margin-bottom: 20px!important;
}
.mb-40 {
  margin-bottom: 40px!important;
}
.mb-70 {
  margin-bottom: 70px!important;
}
/* ... */

